jugando con be-plus con Seba

--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "tareas-plus",
   "version": "1.0.0",
   "description": "Gestión de tareas y requerimientos",
-  "main": "index.js",
+  "main": "dist/server/server-tasks.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "npm run build",
+    "build": "(tsc -p src/unlogged || echo \"continue w/error\") && (tsc -p src/client || echo \"continue w/error\") && (tsc -p src/server || echo \"continue w/error\") && mixin-patch",
+    "build-client": "(tsc -p src/client || echo \"continue w/error\") && mixin-patch",
+    "build-unlogged": "(tsc -p src/unlogged || echo \"continue w/error\") && mixin-patch",
+    "build-server": "(tsc -p src/server || echo \"continue w/error\") && mixin-patch",
+    "mixin-patch": "mixin-patch",
+    "watch:buildC": "(tsc -p src/client --watch || echo \"continue w/error\")",
+    "watch:buildS": "(tsc -p src/server --watch || echo \"continue w/error\")",
+    "watch:buildU": "(tsc -p src/unlogged --watch || echo \"continue w/error\")",
+    "start": "node dist/server/server-tasks.js",
+    "dump": "npm start -- --dump-db",
+    "bdump": "npm run build && npm run dump"
   },
   "author": "",
   "license": "MIT",
